--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,9 @@
         "laravel/breeze": "^1.28",
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.3",
-        "laravel/tinker": "^2.8"
+        "laravel/tinker": "^2.8",
+        "livewire/livewire": "^2.0",
+        "pestphp/pest-plugin-livewire": "^2.1"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
